# imessage-exporter

./: .gitignore  README.md
imessage-database/: Cargo.toml  README.md  build.rs
imessage-database/src/: lib.rs
imessage-database/src/error/: digital_touch.rs  handwriting.rs  message.rs  mod.rs  plist.rs  streamtyped.rs  table.rs  typedstream.rs
imessage-database/src/message_types/: app.rs  edited.rs  expressives.rs  handwriting.rs  mod.rs  placemark.rs  text_effects.rs  variants.rs
imessage-database/src/tables/: attachment.rs  chat.rs  chat_handle.rs  handle.rs  messages.rs  table.rs
imessage-database/src/util/: ascii_canvas.rs  attributed_string.rs  dates.rs  dirs.rs  mod.rs  platform.rs  plist.rs  query_context.rs  streamtyped.rs  svg_canvas.rs  typedstream.rs
imessage-database/test_data/edited_message/: EditedAndDeleted.plist  EditedAndUnsent.plist  MutliPartOneDeleted.plist
imessage-database/test_data/handwritten_message/: handwriting.ascii  handwriting_half.ascii  hello.ascii  pollock.ascii  test.ascii
imessage-database/test_data/typedstream/: AppMessage  Array  Attachment  AttachmentI16  Code  CustomReaction  Date  Email  Formatted  LongMessage  Mention  MultiPartWithDeleted  PhoneNumber  TextEffects  TextStyles  TextStylesMixed  TextStylesSingleRange  URLMessage
imessage-exporter/: Cargo.toml  README.md
imessage-exporter/src/: main.rs
imessage-exporter/src/app/: attachment_manager.rs  converter.rs  error.rs  export_type.rs  options.rs  progress.rs  runtime.rs  sanitizers.rs
imessage-exporter/src/exporters/: exporter.rs  html.rs  mod.rs  (+3 more)
(+35 files in other folders)
